--- a/circumference of the circle.ipynb
+++ b/circumference of the circle.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value of circle redius 3\n",
-      "the circle circumference C= 18.84\n"
+      "Enter the value of circle redius, r= 87897\n",
+      "the circle circumference C= 551993.16\n"
      ]
     }
    ],
    "source": [
-    " input ('Enter the value of circle redius ')\n",
+    " r= input ('Enter the value of circle redius, r= ')\n",
     "r=float(r)\n",
     "print ('the circle circumference C=',2*3.14*r)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -33,18 +40,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
