--- a/rectangle circumference.ipynb
+++ b/rectangle circumference.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value of rectangle high, h= 7\n",
-      "Enter the value of rectangle high, L= 8.9\n",
-      "the rectangle circumference is C= 124.60000000000001\n"
+      "Enter the value of rectangle high, h= 5\n",
+      "Enter the value of rectangle high, L= 5\n",
+      "the rectangle circumference is C= 20.0\n"
      ]
     }
    ],
@@ -20,8 +20,22 @@
     "L = input ('Enter the value of rectangle high, L= ')\n",
     "h=float(h)\n",
     "L=float(L)\n",
-    "print ('the rectangle circumference is C=',2*h*L)"
+    "print ('the rectangle circumference is C=',2*(h+L))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
